Fix horizontal scrolling cursor

--- a/utopian/static/sass/base/_base.scss
+++ b/utopian/static/sass/base/_base.scss
@@ -73,6 +73,7 @@ body {
     3fr
     [full-end];
   background-color: var(--color-background);
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 420px) {
